# kitties-pallet-node

./: Makefile  README.md
.github/workflows/: test.yml
node/src/: chain_spec.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  default_weights.rs  lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: pallet_kitties.rs
